--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.1",
+    "pydantic>=2.11.3",
     "requests>=2.32.3",
 ]
